// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> renders correctly 1`] = `
<a
  className="normal"
  href="https://www.baidu.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  target="__blank"
>
  click this link!
</a>
`;

exports[`<Link> renders correctly 2`] = `
<a
  className="hovered"
  href="https://www.baidu.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  target="__blank"
>
  click this link!
</a>
`;

exports[`<Link> renders correctly 3`] = `
<a
  className="normal"
  href="https://www.baidu.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  target="__blank"
>
  click this link!
</a>
`;
